--- a/android/build.gradle
+++ b/android/build.gradle
@@ -48,3 +48,7 @@ android {
         minSdkVersion 21
     }
 }
+
+dependencies {
+    implementation("com.microsoft.onnxruntime:onnxruntime:1.21.0")
+}
