--- a/android/build.gradle
+++ b/android/build.gradle
@@ -50,5 +50,5 @@ android {
 }
 
 dependencies {
-    implementation("com.microsoft.onnxruntime:onnxruntime:1.21.0")
+    implementation("com.microsoft.onnxruntime:onnxruntime-android:1.21.0")
 }
